@@ -12,13 +12,19 @@ numbers, like @code{<4 6+>}.
 \score { \notes  <
  \context FiguredBass {
    \figures {
-	<_! 3+ 5- _ 7! 9 >4
-	< [4 6] >
+	<3 [5 7]>
+\once \property FiguredBass.BassFigure \set #'direction = #-1
+	<3 [5 7]>
+	<3 [5] 7 [9 11]>
+	<3+ 5- 7!>
+	<3 _ 5 _ 7>
+%	<3 [4 6] 7>
    }
  }
 
- \context Voice {
+ \context Voice { \clef bass
    c 4
+   c c c c c 
    g8
   }
  
